# karchive

./: .gitignore  CMakeLists.txt  README.md  k7zip.cpp  k7zip.h  kar.cpp  kar.h  karchive.cpp  karchive.h  karchive.rc  karchive_global.h  karchive_p.h  karchivedirectory.h  karchiveentry.h  karchivefile.h  kbzip2filter.cpp  kbzip2filter.h  kcompressiondevice.cpp  kcompressiondevice.h  kcompressiondevice_p.h  kfilterbase.cpp  kfilterbase.h  kfilterdev.cpp  kfilterdev.h  kgzipfilter.cpp  kgzipfilter.h  klimitediodevice.cpp  klimitediodevice_p.h  knonefilter.cpp  knonefilter.h  krcc.cpp  krcc.h  ktar.cpp  ktar.h  kxzfilter.cpp  kxzfilter.h  kzip.cpp  kzip.h  kzipfileentry.h  kzstdfilter.cpp  (+2 more)
bzip2/: CMakeLists.txt  bzip2.c  bzlib.h
karchive/: CMakeLists.txt  k7zip.cpp  k7zip.h  kar.cpp  kar.h  karchive.cpp  karchive.h  karchive.rc  karchive_global.h  karchive_p.h  karchivedirectory.h  karchiveentry.h  karchivefile.h  kbzip2filter.cpp  kbzip2filter.h  kcompressiondevice.cpp  kcompressiondevice.h  kcompressiondevice_p.h  kfilterbase.h  kfilterdev.cpp  kfilterdev.h  kgzipfilter.cpp  kgzipfilter.h  klimitediodevice.cpp  klimitediodevice_p.h  knonefilter.h  krcc.cpp  krcc.h  ktar.cpp  ktar.h  kxzfilter.cpp  kxzfilter.h  kzip.cpp  kzip.h  kzipfileentry.h
xz/: CMakeLists.txt
xz/src/common/: tuklib_physmem.c
zlib/: CMakeLists.txt
